--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,14 @@
     { "source": "/about", "destination": "/about.html" },
     { "source": "/home", "destination": "/home.html" },
     { "source": "/portofolio", "destination": "/portofolio.html" },
+    { "source": "/contact", "destination": "/contact.html" },
     { "source": "/(.*)", "destination": "/index.html" }
   ],
   "redirects": [
     { "source": "/catalog.html", "destination": "/catalog", "permanent": true },
     { "source": "/about.html", "destination": "/about", "permanent": true },
     { "source": "/home.html", "destination": "/home", "permanent": true },
+    { "source": "/portofolio.html", "destination": "/portofolio", "permanent": true },
     { "source": "/portofolio.html", "destination": "/portofolio", "permanent": true }
   ]
 }
